css/styles.css
* {
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 16px;
}

html {
    margin: 0;
    padding: 0;
}

body {
    background-color: rgb(255, 211, 219);
    margin: 0;
    padding: 0;
}

a {
    color: rgb(95, 220, 255);
}

p {
    margin: 8px 0;
}

h1, h2, h3, h4, h5, h6
{
    font-weight: normal;
    line-height: 1.5;
    margin-bottom: 0;
}

h1
{
    font-size: 32px;
}

h2
{
    font-size: 26px;
}

h3
{
    font-size: 20px;
    font-weight: bold;
    text-decoration: underline;
}

nav {
    display: flex;
}

nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

hr {
    margin-top: 0;
}

nav {
    margin-top: 8px;
}

.titleSubtitle {
    color: gray;
    font-size: 12px;
    margin-top: 0;
}

.mainPage {
    background-color: #ffffff;
    border-left: 2px solid lightgray;
    border-right: 2px solid lightgray;
    box-shadow: 0 0 10px gray;
    width: 50vw;
    min-height: 100vh;
    margin: 0 auto;
    padding: 20px;
}

.projectImage {
    border: 1px solid lightgray;
    border-radius: 5px;
}

.imgBorder {
    border: 1px solid lightgray;
    border-radius: 5px;
}

.flexBox {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
}

.tagBox {
    border: 2px solid lightgray;
    border-radius: 2px;
    display: flex;
    padding: 4px;
    height: 36px;
    align-items: center;
}

.tagBox p {
    display: inline;
    margin: 0;
}

.tagBox a {
    text-decoration: none;
}

.tagBox p {
    font-weight: bold;
}

.tagBox img {
    margin-right: 8px;
}

